completed testimonial section along with mobile design and fixed some minor layout issue

--- a/stylesheets/util.css
+++ b/stylesheets/util.css
@@ -131,7 +131,10 @@ a {
 
 .section {
     flex-direction: column;
+    gap: 4rem;
     width: 100%;
+
+    margin-top: 4rem;
 
     max-width: var(--section-max-width);
     padding: var(--section-padding);
@@ -139,7 +142,7 @@ a {
 
 .section_title {
     text-align: center;
-    margin-bottom: 4rem;
+    /* margin-bottom: 4rem; */
 }
 
 .section_grad {
